# n0boilerplate-rust

./: Cargo.toml  README.md
src/: main.rs
